# Simplex-DG-solver

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  Makefile  pyproject.toml
.github/: copilot-instructions.md
docs/assets/: Energy.md  SDG4PDEOnSphere.md  多元素 DG 平流方程式實作與收斂驗證藍圖 (Multi-Element DG Advection).md  多元素 SBP-DG 平流方程式實作與收斂驗證藍圖.md  實作計劃1.md  實作計劃3.md
notebooks/Visualization/: modal_expansion_tikhonov.ipynb
notebooks/experimental/: Divergence.ipynb  Jacobian.ipynb  Jacobian_on_Sphere.ipynb  Multi_Element_Advection_Convergence copy.ipynb  Multi_Element_Advection_Convergence.ipynb  Multi_Element_Advection_Convergence_PBC.ipynb  Multi_Element_Advection_Time_Error_Tracking.ipynb  Multi_Element_Advection_Time_Error_Tracking_PBC.ipynb  Multi_Element_SBP_DG_Advection_Convergence.ipynb  Multi_Element_Spherical_DG_Advection_Solver.ipynb  Single_Element_Advection_Dynamic.ipynb  Single_Element_Advection_Stationary.ipynb  Spherical_DG_LongTerm_Simulation.ipynb  connectivity_demo.ipynb  f_mask.ipynb  h_convergence.ipynb
notebooks/verification/: Verify_Differentiation_Matrices.ipynb  Verify_Mass_Matrix.ipynb  Verify_SBP_Property.ipynb  Verify_Weights.ipynb
outputs/C.R. & error curve/: README.md
src/: __init__.py
src/bases/: __init__.py  simplex_2d.py  vandermonde.py
src/core/: __init__.py  connectivity.py  data_structs.py  dubiner_tikhonov.py  generators.py  modal_expansion.py  render_utils.py  validation.py
src/geometry/: __init__.py  data_structs.py  mappings.py  metrics.py
src/numerics/: __init__.py  filters.py  orthogonal_polys.py
src/reconstruction/: __init__.py  boundary.py  modal_reconstruct.py  operators.py
tests/integration/: test_validation.py
tests/unit/: test_data.py
